Přepracováno načítání a ukládání statistik růstu členů na denní bázi s výpočtem zpětně od aktuálního stavu, vylepšena cesta k modulu a aktualizován `.gitignore` a přesměrovací URI.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@ status_page_output.html
 
 # VSCode settings
 .vscode/
+
+# Thesis
+bakalarskaPrace_implementace.md
+
+# AI Files
+.gemini/
+.agent/
+*.agent.md
+task.md
+implementation_plan.md
+walkthrough.md
